tests/ui/parser/pragma_versions.stderr
error: number too large to fit in target type
  --> ROOT/tests/ui/parser/pragma_versions.sol:LL:CC
   |
LL | pragma solidity ^4294967296;
   |                  ^^^^^^^^^^
   |

error: number too large to fit in target type
  --> ROOT/tests/ui/parser/pragma_versions.sol:LL:CC
   |
LL | pragma solidity ^0.4294967296;
   |                  ^^^^^^^^^^^^
   |

error: invalid digit found in string
  --> ROOT/tests/ui/parser/pragma_versions.sol:LL:CC
   |
LL | pragma solidity 88_;
   |                 ^^^
   |

error: ranges can only be combined using the || operator
  --> ROOT/tests/ui/parser/pragma_versions.sol:LL:CC
   |
LL | pragma solidity 0 - 1 0 - 2;
   | ^^^^^^^^^^^^^^^^^^^^^
   |

error: aborting due to 4 previous errors

